# LTAOM_ROS2

FAST_LIO/: CMakeLists.txt  package.xml
FAST_LIO/config/: gazebo.yaml  mid360.yaml
FAST_LIO/include/: common_lib.h
FAST_LIO/launch/: mapping.launch.py
FAST_LIO/msg/: Pose6D.msg  States.msg
FAST_LIO/src/: IMU_Processing.hpp  extra_lib.cpp  extra_lib.h  fastlio_node.cpp  laserMapping.cpp  preprocess.cpp  preprocess.h
STD/: CMakeLists.txt  package.xml
STD/include/: std.h
STD/src/: loop_detection.cpp  std.cpp  std_ba.cpp
loop_optimization/: CMakeLists.txt  package.xml
loop_optimization/include/: ISAM2Extended.h  common_lib.hpp  keyframe_containner.hpp
loop_optimization/launch/: loopopt_config_avia.yaml  ltaom_avia.launch.py  ltaom_gazebo.launch.py  ltaom_mid360.launch.py
loop_optimization/src/: loop_optimization_node.cpp
